--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.25.0",
-    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.5.2",
+    "vuetify": "^2.5.7",
     "vuex": "^3.6.2"
+  },
+  "peerDependencies": {
+
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
