--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "prismjs": "^1.24.1",
     "sass": "^1.32.13",
     "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.11"
