--- a/package.json
+++ b/package.json
@@ -32,27 +32,28 @@
     "vuex": ">=3.6.2"
   },
   "devDependencies": {
-    "axios": "^0.21.1",
-    "core-js": "^3.6.5",
     "@mdi/font": "^5.9.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "prismjs": "^1.24.1",
-    "sass": "^1.32.13",
-    "sass-loader": "^12.1.0",
+    "sass": "^1.39.0",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.25.0",
     "vue-router": "^3.5.2",
+    "vue-template-compiler": "^2.6.11",
     "vuetify": "^2.5.7",
-    "vuex": "^3.6.2",
-    "vue-template-compiler": "^2.6.11"
+    "vuex": "^3.6.2"
   },
   "eslintConfig": {
     "root": true,
