更新文档地址

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "UI",
     "Vue"
   ],
-  "homepage": "https://zhtgithub.github.io/vuerocket",
+  "homepage": "https://zhtgithub.github.io/vue-rocket-docs",
   "repository": {
     "type": "git",
     "url": "https://github.com/ZHTGitHub/vue-rocket/tree/master"
