--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "lib": "vue-cli-service build --target lib --name vuerocket --dest lib packages/index.js",
     "publish": "npm run build"
   },
-  "dependencies": {},
   "peerDependencies": {
     "lodash": ">=4.17.21",
     "vue": ">=2.6.11",
@@ -51,7 +50,9 @@
     "prismjs": "^1.24.1",
     "sass": "^1.39.0",
     "sass-loader": "^8.0.0",
+    "vkbeautify": "^0.99.3",
     "vue": "^2.6.11",
+    "vue-highlightjs": "^1.3.3",
     "vue-i18n": "^8.25.0",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.11",
@@ -80,6 +81,6 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }  
+    }
   }
 }
