--- a/package.json
+++ b/package.json
@@ -80,5 +80,8 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "vue-virtual-scroller": "^1.0.10"
   }
 }
