--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-rocket",
-  "version": "0.23.2",
+  "version": "0.23.3",
   "description": "基于 Vue+Vuetify 的后台管理系统框架",
   "author": "zenghaitao",
   "private": false,
@@ -35,6 +35,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.6.5",
@@ -81,7 +82,5 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {
-    "vue-virtual-scroller": "^1.0.10"
-  }
+  "dependencies": {}
 }
