--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "lib": "vue-cli-service build --target lib --name vuerocket --dest lib packages/index.js",
+    "prepublish": "npm run lib",
     "publish": "npm run build"
   },
   "peerDependencies": {
