--- a/public/api/global/sidebar/components.json
+++ b/public/api/global/sidebar/components.json
@@ -18,12 +18,6 @@
       "label": "导航",
       "children": [
         {
-          "value": "virtualScroll",
-          "label": ["VirtualScroll", "虚拟滚动条"],
-          "link": "/components/virtualScroll"
-        },
-
-        {
           "value": "pagination",
           "label": ["Pagination", "分页"],
           "link": "/components/pagination"
@@ -123,6 +117,18 @@
         "value": "image",
         "label": ["Image", "图片"],
         "link": "/components/image"
+      },
+
+      { 
+        "value": "list",
+        "label": ["List", "列表"],
+        "link": "/components/list"
+      },
+
+      {
+        "value": "virtualScroll",
+        "label": ["VirtualScroll", "虚拟滚动条"],
+        "link": "/components/virtualScroll"
       }
     ]
    },
