--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-rocket",
-  "version": "0.31.15",
+  "version": "0.31.16",
   "description": "基于 Vue+Vuetify 的后台管理系统框架",
   "author": "zenghaitao",
   "private": false,
@@ -53,6 +53,7 @@
     "vue-i18n": "^8.25.0",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.11",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.5.7",
     "vuex": "^3.6.2"
   },
