--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-rocket",
-  "version": "0.32.3",
+  "version": "0.33.0",
   "description": "基于 Vue+Vuetify 的后台管理系统框架",
   "author": "zenghaitao",
   "private": false,
@@ -53,7 +53,7 @@
     "vue-i18n": "^8.25.0",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.11",
-    "vue-toastification": "^1.7.14",
+    "vue-toasted": "^1.1.28",
     "vuetify": "^2.5.7",
     "vuex": "^3.6.2"
   },
