--- a/public/api/global/sidebar/components.json
+++ b/public/api/global/sidebar/components.json
@@ -138,6 +138,12 @@
       "label": "其它",
       "children": [
         {
+          "value": "drawingBoard",
+          "label": ["DrawingBoard", "画板"],
+          "link": "/components/drawingBoard"
+        },
+
+        {
           "value": "drawImage",
           "label": ["DrawImage", "绘图"],
           "link": "/components/drawImage"
