--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-rocket",
-  "version": "0.34.32",
+  "version": "0.34.35",
   "description": "基于 Vue+Vuetify 的后台管理系统框架",
   "author": "zenghaitao",
   "private": false,
@@ -42,6 +42,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "fabric": "^5.2.4",
     "husky": "^7.0.4",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
@@ -82,7 +83,5 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {
-    "fabric": "^5.2.4"
-  }
+  "dependencies": {}
 }
