--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-rocket",
-  "version": "0.35.7",
+  "version": "0.35.9",
   "description": "基于 Vue+Vuetify 的后台管理系统框架",
   "author": "zenghaitao",
   "private": false,
@@ -83,5 +83,7 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "@squoosh/lib": "^0.4.0"
+  }
 }
