--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "prismjs": "^1.24.1",
     "sass": "^1.39.0",
     "sass-loader": "^8.0.0",
+    "squoosh-compress": "^1.0.1",
     "vkbeautify": "^0.99.3",
     "vue": "^2.6.11",
     "vue-highlightjs": "^1.3.3",
