--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-rocket",
-  "version": "0.39.6",
+  "version": "0.39.7",
   "description": "基于 Vue+Vuetify 的后台管理系统框架",
   "author": "zenghaitao",
   "private": false,
@@ -43,11 +43,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "fabric": "^5.2.4",
+    "heic2any": "^0.0.4",
     "husky": "^7.0.4",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "prismjs": "^1.24.1",
-    "rocket-nifty.js": "^1.0.0",
     "sass": "^1.39.0",
     "sass-loader": "^8.0.0",
     "squoosh-compress": "^1.0.1",
